# fast-gmm

./: .cproject  .pydevproject  CMakeLists.txt  CMakeLists.txt~  Makefile  README.md  package.xml  package.xml~
include/: CDDynamics.h  GMRDynamics.h  Gaussians.h  ThirdPoly.h
include/fast_gmm/: CDDynamics.h  GMRDynamics.h  Gaussians.h  MJDynamics.h  SVR.h  ThirdPoly.h
src/: CDDynamics.cpp  GMRDynamics.cpp  Gaussians.cpp  MJDynamics.cpp  SVR.cpp  ThirdPoly.cpp  main.cpp
